--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button onclick="addNumero('9')">9</button>
                 <button onclick="addNumero('0')" class="tecla-zero">0</button>
                 <button onclick="apagar()" class="tecla-apagar">←</button>
-                <button onclick="enviar()" class="tecla-enviar">↵</button>
+                <button onclick="enviar()" class="tecla-enviar">Confirma</button>
             </div>
         </div>
         <img src="Ada.png" alt="Logo Caccal" id="Logo-Caccal">
