ajuste para funcionar com docker (funcionando, falta arrumar o script.js)

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,8 @@
             </div>
         </div>
 
-        <img src="images/Ada.png" alt="Logo Caccal" id="Logo-Caccal" class="w-[10vw] bg-white rounded-lg h-auto mt-auto mb-5">
+        <img src="public/images/Ada.png" alt="Logo Caccal" id="Logo-Caccal" class="w-[10vw] bg-white rounded-lg h-auto mt-auto mb-5">
     </div>
-
-    <script src="src/script.js"></script>
+    <script src="../src/script.js"></script>
 </body>
 </html>
